@@ -15,12 +15,17 @@
 
 like after merged
 
+fsvn-use-experimental-run-recursive-status was created
+
 ** fsvn-authenticate-repository not works.
 
 Google code problem
 can access to read-only, but cannot commit access.
 
 
+** Emacs-lisp illegal conventions
+
+C-c prefix key
 
 * browse-mode
 ** sometime happens apply: Wrong number of arguments: max, 0
