@@ -6,8 +6,8 @@
 
 ;; fsvn.el is free software; you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
-;; the Free Software Foundation; either version 2, or (at your option)
-;; any later version.
+;; the Free Software Foundation, either version 3 of the License, or
+;; (at your option) any later version.
 
 ;; fsvn.el is distributed in the hope that it will be useful,
 ;; but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -70,6 +70,9 @@
 ;;    TODO: password authenticate only when commit.
 ;;          How to send password for stopping processes.
 
+;; Q. TODO
+;; A. TODO
+;; (setenv "SVN_SSH" "ssh -q")
 
 ;; Q.  How to use svk in windows.
 ;; A.  Sample of settings.
